# rook-agent

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
docs/: GITHUB_ISSUES_BACKLOG.md
macos/RookMenuBar/: Package.swift  README.md
macos/RookMenuBar/Sources/RookMenuBar/: AppModel.swift  BridgeProcess.swift  PanelView.swift  RookMenuBarApp.swift  StateOrbView.swift
prompts/: gemini_session.md
rook/adapters/openclaw/: client.py  device_auth.py  models.py  streaming.py
rook/audio/: barge_in.py  capture.py  playback.py  voice_pipeline.py  waveform_processor.py
rook/audio/providers/: base.py  gemini_live.py  mock.py
rook/cli/: app.py  commands.py  input_handler.py  renderer.py  repl.py  themes.py
rook/cli/widgets/: orb.py  panel.py  status.py  transcript.py  waveform.py
rook/core/: agent.py  config.py  events.py  message_router.py  state_machine.py
rook/macos/: __init__.py  backend.py  bridge_renderer.py
rook/storage/: database.py  schema.sql
rook/storage/repositories/: messages.py  sessions.py  tasks.py
rook/tasks/: executor.py  manager.py  progress.py  states.py
rook/utils/: exceptions.py  logging.py  streaming_text.py
tests/: conftest.py
tests/integration/: test_openclaw_flow.py  test_voice_flow.py
tests/unit/: test_commands.py  test_openclaw_chunk_merge.py  test_openclaw_device_auth.py  test_openclaw_prompt.py  test_orb.py  test_state_machine.py  test_streaming_text.py  test_task_states.py  test_waveform.py
